# GravitySimGl

./: .gitignore  CMakeLists.txt  README.md
cmd/: main.cpp  main.hpp
internal/: circle.cpp  circle.hpp
shaders/: fragmentShader.glsl  shaders.cpp  shaders.hpp  vertexShader.glsl
